k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: default
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8089
      targetPort: 8089
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: default

  
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 4200
      targetPort: 4200
  type: ClusterIP
